Strip mined loop verification fails with assert(is_OuterStripMinedLoop()) failed: invalid node class

XMLWordPrintable

    • b25
    • 14
    • b27
    • Verified

        Generated attached test crashes with
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/node.hpp:865
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (open/src/hotspot/share/opto/node.hpp:865), pid=19592, tid=19603
        # assert(is_OuterStripMinedLoop()) failed: invalid node class
        #
        # JRE version: Java(TM) SE Runtime Environment (14.0) (fastdebug build 14-internal+0-2019-12-03-2213288.lmesnik.ks-apps)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-internal+0-2019-12-03-2213288.lmesnik.ks-apps, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1186d2c] LoopNode::verify_strip_mined(int) const+0x3ec
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/lmesnik/Downloads/r1-101/core.19592)
        #
        # An error report file with more information is saved as:
        # /home/lmesnik/Downloads/r1-101/hs_err_pid19592.log
        #
        # Compiler replay data is saved as:
        # /home/lmesnik/Downloads/r1-101/replay_pid19592.log
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #
        Current thread is 19603

          1. FuzzerUtils.class
            8 kB
          2. FuzzerUtils.java
            13 kB
          3. FuzzerUtils$1.class
            0.8 kB
          4. hs_err_pid19829.log
            82 kB
          5. replay_pid19829.log
            188 kB
          6. Test.class
            5 kB
          7. Test.java
            1 kB
          8. Test.java
            7 kB

              Assignee:
              Tobias Hartmann
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: