8235452: Strip mined loop verification fails with assert(is_OuterStripMinedLoop()) failed: invalid node class

Do not try to verify strip mining if the strip mined loop is malformed.

Reviewed-by: roland, vlivanov